--- a/main/static/css/app.css
+++ b/main/static/css/app.css
@@ -8,6 +8,11 @@ body {
   margin: 0;
   padding: 0;
 }
+p {
+  margin-bottom: 30px;
+  /*color: #989898;*/
+  padding-left: 20px;
+}
 div {
   word-wrap: break-word;
   line-height: 1.25rem;
