send confirmation code to worker dashboard

--- a/main/templates/end.html
+++ b/main/templates/end.html
@@ -34,6 +34,9 @@
                <!--to the Crowdflower form to get rewarded.</h4>-->
                   We have sent the confirmation code to your dashboard via the Contribution ID you provided at Login page. Please copy the code to Crowdflower main task to get rewarded.
              </span>
+            <span>
+                Confirmation code status: {{status_code}}, reason: {{reason}}
+            </span>
           {% else %}
               <span class="red-text">
                 <p>We thank you for your participation! </p>
