deleted credentials; deleted nlp; use fixed taskid; disable task complete detection

--- a/main/templates/vision-dialog.chat.html
+++ b/main/templates/vision-dialog.chat.html
@@ -327,9 +327,9 @@
                       var gt_layout = JSON.parse(textInput.getAttribute('data'));
                       if (shape_layout_match(gt_layout, canvas_data)) {
                           // painter's view on 2Dshape task
-                          document.getElementById("textInput").setAttribute("placeholder", "DONE - the drawing has completed");
-                          document.getElementById("textInput").disabled = true;
-                          $("#submit_canvas").hide();
+                          // document.getElementById("textInput").setAttribute("placeholder", "DONE - the drawing has completed");
+                          // document.getElementById("textInput").disabled = true;
+                          // $("#submit_canvas").hide();
                       }
                   }
                 });
